Bug 393471 - spelling-error-in-binary usr/lib/x86_64-linux-gnu/qt5/plugins/kcm_wacomtablet.so Allows to Allows one to
Summary: spelling-error-in-binary usr/lib/x86_64-linux-gnu/qt5/plugins/kcm_wacomtablet...
Status: RESOLVED FIXED
Alias: None
Product: wacomtablet
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Valerii Malov
URL:
Keywords: junior-jobs
Depends on:
Blocks:
 
Reported: 2018-04-24 16:07 UTC by Scarlett Moore
Modified: 2018-05-20 09:27 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Scarlett Moore 2018-04-24 16:07:20 UTC
I: kde-config-tablet: spelling-error-in-binary usr/lib/x86_64-linux-gnu/qt5/plugins/kcm_wacomtablet.so Allows to Allows one to
N: 
N:    Lintian found a spelling error in the given binary. Lintian has a list
N:    of common misspellings that it looks for. It does not have a dictionary
N:    like a spelling checker does.
N:    
N:    If the string containing the spelling error is translated with the help
N:    of gettext or a similar tool, please fix the error in the translations
N:    as well as the English text to avoid making the translations fuzzy. With
N:    gettext, for example, this means you should also fix the spelling
N:    mistake in the corresponding msgids in the *.po files.
N:    
N:    You can often find the word in the source code by running:
N:    
N:     grep -rw <word> <source-tree>
N:    
N:    This tag may produce false positives for words that contain non-ASCII
N:    characters due to limitations in strings.
N:    
N:    Severity: minor, Certainty: wild-guess
N:    
N:    Check: binaries, Type: binary, udeb
Comment 1 Shivang Saxena 2018-05-18 18:00:00 UTC
I would love to try to fix this!
Comment 2 Shivang Saxena 2018-05-18 18:53:15 UTC
I believe I submitted the patch correctly for review... https://phabricator.kde.org/D12970
Comment 3 Valerii Malov 2018-05-20 09:27:12 UTC
Git commit 2627742156f649d2173679282cea1603aa95fb70 by Valeriy Malov, on behalf of Shivang Saxena.
Committed on 20/05/2018 at 09:17.
Pushed by valeriymalov into branch 'master'.

Fixed grammar issue

Summary:
Changed "Allows to ..." to "Allows one to" in the 3 files I could find it.

Reviewers: ngraham, valeriymalov

Reviewed By: ngraham, valeriymalov

Differential Revision: https://phabricator.kde.org/D12970

M  +1    -1    src/kcmodule/tabletpagewidget.ui
M  +1    -1    src/kcmodule/touchpagewidget.ui
M  +1    -1    src/kded/tabletdaemon.h

https://commits.kde.org/wacomtablet/2627742156f649d2173679282cea1603aa95fb70