Fixed grammar issue

Summary:
Changed "Allows to ..." to "Allows one to" in the 3 files I could find it.

BUG: 393471

Reviewers: ngraham, valeriymalov

Reviewed By: ngraham, valeriymalov

Differential Revision: https://phabricator.kde.org/D12970